feature: update comment route/controller/models/store functions added
